[gd_scene load_steps=43 format=3 uid="uid://cc4ju4627gpv3"]

[ext_resource type="Texture2D" uid="uid://dwcfgs8oiyuge" path="res://assets/ui/menus/multiplayer/lobby/portrait_bg_gray.png" id="1_l7yku"]
[ext_resource type="Script" path="res://assets/ui/menus/singleplayer/SingleplayerMenu.gd" id="1_y55ef"]
[ext_resource type="Texture2D" uid="uid://udpbsuq8lmwh" path="res://assets/ui/menus/multiplayer/lobby/portrait_bg_green.png" id="2_ts2h3"]
[ext_resource type="Texture2D" uid="uid://0wcpekxahibe" path="res://assets/ui/menus/common/forms/input_245x25.png" id="3_aexbk"]
[ext_resource type="Texture2D" uid="uid://dbehj3pe803v4" path="res://assets/ui/menus/multiplayer/lobby/portrait_bg_orange.png" id="3_ct5ew"]
[ext_resource type="Texture2D" uid="uid://c54utqv73s3jo" path="res://assets/ui/menus/common/forms/button_100x25_normal.png" id="3_knmna"]
[ext_resource type="Texture2D" uid="uid://d001ap3g0qxww" path="res://assets/ui/menus/multiplayer/lobby/portrait_bg_red.png" id="4_2fbxv"]
[ext_resource type="Texture2D" uid="uid://dxoteh2b6rvs0" path="res://assets/ui/menus/common/forms/button_100x25_pressed.png" id="4_rdig5"]
[ext_resource type="Texture2D" uid="uid://igawikklewiq" path="res://assets/ui/menus/common/forms/button_100x25_disabled.png" id="5_enjrv"]
[ext_resource type="PackedScene" uid="uid://cy14hlyb888wd" path="res://assets/tracks/components/SpawnHandler.tscn" id="6_k15ex"]
[ext_resource type="FontFile" uid="uid://lsgrvo3ka24r" path="res://assets/ui/common/default_font.ttf" id="6_mxwl3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1sie"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xrjdq"]
texture = ExtResource("3_knmna")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0fjdh"]
texture = ExtResource("4_rdig5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5ha7c"]
texture = ExtResource("4_rdig5")
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fooax"]
texture = ExtResource("5_enjrv")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mccii"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dtnn5"]
texture = ExtResource("3_aexbk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e3idh"]
texture = ExtResource("3_aexbk")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nu3lc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_layoy"]
atlas = ExtResource("1_l7yku")
region = Rect2(0, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtqmx"]
atlas = ExtResource("1_l7yku")
region = Rect2(18, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4xv6"]
atlas = ExtResource("1_l7yku")
region = Rect2(36, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0o1s"]
atlas = ExtResource("1_l7yku")
region = Rect2(54, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdh8j"]
atlas = ExtResource("2_ts2h3")
region = Rect2(0, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1p3w"]
atlas = ExtResource("2_ts2h3")
region = Rect2(18, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bedop"]
atlas = ExtResource("2_ts2h3")
region = Rect2(36, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryn83"]
atlas = ExtResource("2_ts2h3")
region = Rect2(54, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gibev"]
atlas = ExtResource("3_ct5ew")
region = Rect2(0, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_05c0y"]
atlas = ExtResource("3_ct5ew")
region = Rect2(18, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxnyt"]
atlas = ExtResource("3_ct5ew")
region = Rect2(36, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbkxc"]
atlas = ExtResource("3_ct5ew")
region = Rect2(54, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f4iu"]
atlas = ExtResource("4_2fbxv")
region = Rect2(0, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk0w2"]
atlas = ExtResource("4_2fbxv")
region = Rect2(18, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5won"]
atlas = ExtResource("4_2fbxv")
region = Rect2(36, 0, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgti0"]
atlas = ExtResource("4_2fbxv")
region = Rect2(54, 0, 18, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_sjvjb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_layoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtqmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4xv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0o1s")
}],
"loop": true,
"name": &"gray",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdh8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1p3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bedop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryn83")
}],
"loop": true,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gibev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05c0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxnyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbkxc")
}],
"loop": true,
"name": &"orange",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f4iu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk0w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5won")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgti0")
}],
"loop": true,
"name": &"red",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7h10g"]
bg_color = Color(0.878431, 0.972549, 0.811765, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cyibo"]

[sub_resource type="Animation" id="Animation_y1sic"]
resource_name = "PlayerName"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerName:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(97.5, 70), Vector2(97.5, 68), Vector2(97.5, 70), Vector2(97.5, 68), Vector2(97.5, 70)]
}

[sub_resource type="Animation" id="Animation_rosdg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerName:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(97.5, 70)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m15l0"]
_data = {
"PlayerName": SubResource("Animation_y1sic"),
"RESET": SubResource("Animation_rosdg")
}

[node name="SingleplayerMenu" type="Control" node_paths=PackedStringArray("_spawn_handler")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y55ef")
_spawn_handler = NodePath("Compositions/SpawnHandler")

[node name="BG" type="Panel" parent="."]
offset_right = 640.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k1sie")

[node name="BackBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 70.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_pressed_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_hover_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_focus_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_hover_pressed_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_disabled_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_outline_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_fonts/font = ExtResource("6_mxwl3")
theme_override_font_sizes/font_size = 9
theme_override_styles/normal = SubResource("StyleBoxTexture_xrjdq")
theme_override_styles/hover = SubResource("StyleBoxTexture_0fjdh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5ha7c")
theme_override_styles/disabled = SubResource("StyleBoxTexture_fooax")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mccii")
text = "Back"

[node name="BrowserTitle" type="Label" parent="."]
layout_mode = 0
offset_top = 20.0
offset_right = 640.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("6_mxwl3")
theme_override_font_sizes/font_size = 18
text = "SINGLEPLAYER TIME ATTACK"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PlayerName" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 97.5
offset_top = 70.0
offset_right = 342.5
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_selected_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_uneditable_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_placeholder_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_outline_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/caret_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_fonts/font = ExtResource("6_mxwl3")
theme_override_font_sizes/font_size = 9
theme_override_styles/normal = SubResource("StyleBoxTexture_dtnn5")
theme_override_styles/focus = SubResource("StyleBoxTexture_e3idh")
placeholder_text = "Player name"
alignment = 1
max_length = 8

[node name="Player" type="Panel" parent="."]
layout_mode = 0
offset_left = 138.0
offset_top = 120.0
offset_right = 156.0
offset_bottom = 144.0
scale = Vector2(8, 8)
theme_override_styles/panel = SubResource("StyleBoxEmpty_nu3lc")

[node name="SpawnPoints" type="Node2D" parent="Player"]

[node name="0" type="Node2D" parent="Player/SpawnPoints" groups=["PlayerSpawnPoints"]]
position = Vector2(9, 11)

[node name="PlayerPortrait0" type="AnimatedSprite2D" parent="Player"]
position = Vector2(9, 12)
sprite_frames = SubResource("SpriteFrames_sjvjb")
animation = &"gray"
autoplay = "gray"

[node name="MapSelection" type="Panel" parent="."]
layout_mode = 0
offset_left = 337.5
offset_top = 120.0
offset_right = 542.5
offset_bottom = 312.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7h10g")

[node name="TrackThumbnail" type="TextureRect" parent="MapSelection"]
layout_mode = 0
offset_left = 10.0
offset_top = 25.0
offset_right = 195.0
offset_bottom = 125.0
expand_mode = 1

[node name="MapSelectors" type="Control" parent="MapSelection/TrackThumbnail"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 175.0
offset_bottom = 15.0
grow_vertical = 2

[node name="TrackLeft" type="Button" parent="MapSelection/TrackThumbnail/MapSelectors"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 20.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_mxwl3")
theme_override_font_sizes/font_size = 9
theme_override_styles/focus = SubResource("StyleBoxEmpty_cyibo")
text = "<"

[node name="TrackRight" type="Button" parent="MapSelection/TrackThumbnail/MapSelectors"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -15.0
offset_right = 10.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_mxwl3")
theme_override_font_sizes/font_size = 9
theme_override_styles/focus = SubResource("StyleBoxEmpty_cyibo")
text = ">"

[node name="TrackName" type="Label" parent="MapSelection"]
layout_mode = 0
offset_left = 10.0
offset_top = 125.0
offset_right = 195.0
offset_bottom = 145.0
theme_override_colors/font_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_outline_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_fonts/font = ExtResource("6_mxwl3")
theme_override_font_sizes/font_size = 9
text = "Track: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TrackDifficulty" type="Label" parent="MapSelection"]
layout_mode = 0
offset_left = 10.0
offset_top = 155.0
offset_right = 195.0
offset_bottom = 175.0
theme_override_colors/font_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_outline_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_fonts/font = ExtResource("6_mxwl3")
theme_override_font_sizes/font_size = 9
text = "Dfficulty: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 70.0
offset_right = 540.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_pressed_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_hover_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_focus_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_hover_pressed_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_disabled_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_outline_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_fonts/font = ExtResource("6_mxwl3")
theme_override_font_sizes/font_size = 9
theme_override_styles/normal = SubResource("StyleBoxTexture_xrjdq")
theme_override_styles/hover = SubResource("StyleBoxTexture_0fjdh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5ha7c")
theme_override_styles/disabled = SubResource("StyleBoxTexture_fooax")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mccii")
text = "Start"

[node name="Compositions" type="Node" parent="."]

[node name="SpawnHandler" parent="Compositions" instance=ExtResource("6_k15ex")]

[node name="ErrorShake" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m15l0")
}

[connection signal="pressed" from="BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="MapSelection/TrackThumbnail/MapSelectors/TrackLeft" to="." method="_on_track_left_pressed"]
[connection signal="pressed" from="MapSelection/TrackThumbnail/MapSelectors/TrackRight" to="." method="_on_track_right_pressed"]
[connection signal="pressed" from="StartBtn" to="." method="_on_start_btn_pressed"]
